fix spacing

--- a/src/main.css
+++ b/src/main.css
@@ -16,14 +16,27 @@ body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
 
-/* .slick-prev {
-  left: 3% !important;
+.slick-prev {
+  left: -50px !important;
   z-index: 1;
 }
+
+/*
 .slick-next {
   right: 3% !important;
   z-index: 1;
 } */
+
+/* @media only screen and (min-width: 600px) {
+  .slick-slider {
+    width: 600px;
+  }
+} */
+.slick-slider {
+  margin: 0 auto;
+  width: 80%;
+  justify-content: center;
+}
 
 .slick-prev:before {
   color: #ffc176;
@@ -35,10 +48,13 @@ body::-webkit-scrollbar {
   font-size: 40px;
 }
 
+.slick-slide {
+  width: 600px;
+}
+
 .slick-slide > div {
   display: grid;
   place-items: center;
-  width: 72%;
   margin: auto;
   padding: 0px;
 }
